fixed blue section mobile responsiveness

--- a/css/media.css
+++ b/css/media.css
@@ -212,16 +212,26 @@
     }
     .plumbing-img
     {
-        max-width: 100%;
+        max-width: 100vw;
+        /* margin: 1rem 2rem; */
         display: flex;
         flex-direction: column;
         padding: 0;
-        margin: 0;
+        margin-right: 0px;
+        
     }
     .blue
     {
-        padding: 0;
-        margin: 0;
+        padding: 0 !important;
+        margin: 0 !important;
+        
+    }
+    .row
+    {
+        padding-left: 10px;
+        padding-right: 10px;
+        display: flex;
+        flex-direction: column;
     }
     .blue-text
     {
@@ -232,12 +242,6 @@
     .blue-text h1
     {
     font-size: 3rem;
-    }
-    .row
-    {
-        margin: 0;
-        display: flex;
-        flex-direction: column;
     }
     .row-row
     {
